# pulseaudio-modules-droid-jb2q

./: README.md  configure.ac  meson.build  meson_options.txt
rpm/: pulseaudio-modules-droid-jb2q.spec  pulseaudio-modules-droid-sbj.spec  pulseaudio-modules-droid.spec
src/common/: config-parser-xml.c  droid-util-41qc.h  droid-util-audio.h  droid-util.c  meson.build
src/common/include/droid/: droid-util.h  version.h
src/droid/: droid-sink.c  droid-source.c  meson.build  module-droid-card.c  module-droid-sink.c  module-droid-source.c
